--- a/src/portfolio.css
+++ b/src/portfolio.css
@@ -1,21 +1,135 @@
+@font-face {
+  font-family: 'Poppins';
+  font-style: normal;
+  font-weight: 100;
+  font-display: swap;
+  src: url(https://fonts.gstatic.com/s/poppins/v15/pxiGyp8kv8JHgFVrLPTedw.ttf) format('truetype');
+}
+@font-face {
+  font-family: 'Poppins';
+  font-style: normal;
+  font-weight: 200;
+  font-display: swap;
+  src: url(https://fonts.gstatic.com/s/poppins/v15/pxiByp8kv8JHgFVrLFj_V1s.ttf) format('truetype');
+}
+@font-face {
+  font-family: 'Poppins';
+  font-style: normal;
+  font-weight: 700;
+  font-display: swap;
+  src: url(https://fonts.gstatic.com/s/poppins/v15/pxiByp8kv8JHgFVrLCz7V1s.ttf) format('truetype');
+}
+@font-face {
+  font-family: 'Roboto Condensed';
+  font-style: normal;
+  font-weight: 300;
+  font-display: swap;
+  src: url(https://fonts.gstatic.com/s/robotocondensed/v19/ieVi2ZhZI2eCN5jzbjEETS9weq8-33mZKCM.ttf) format('truetype');
+}
+@font-face {
+  font-family: 'Roboto Condensed';
+  font-style: normal;
+  font-weight: 400;
+  font-display: swap;
+  src: url(https://fonts.gstatic.com/s/robotocondensed/v19/ieVl2ZhZI2eCN5jzbjEETS9weq8-59U.ttf) format('truetype');
+}
+@font-face {
+  font-family: 'Roboto Condensed';
+  font-style: normal;
+  font-weight: 700;
+  font-display: swap;
+  src: url(https://fonts.gstatic.com/s/robotocondensed/v19/ieVi2ZhZI2eCN5jzbjEETS9weq8-32meKCM.ttf) format('truetype');
+}
+body {
+  overflow-x: hidden;
+}
 ul {
   list-style: none;
   padding: 0;
 }
-.links img {
-  max-width: 50px;
+button {
+  border: none;
+  background-color: transparent;
+  cursor: pointer;
+}
+button:focus {
+  outline: none;
+}
+img {
+  max-width: 100%;
+}
+.nav-container {
+  display: flex;
+  position: absolute;
+  top: 0;
+  right: 0;
+  width: 30%;
+  height: 100vh;
+  transition-property: right;
+  transition-duration: 0.5s;
+}
+.nav-container.hide {
+  right: -24%;
+}
+.nav-container .button-container {
+  display: flex;
+  align-items: center;
+  width: 80px;
+}
+.nav-container nav {
+  display: flex;
+  align-items: center;
+  width: 100%;
+  background-color: black;
+  color: white;
+  padding: 50px;
+  font-family: "Poppins", sans-serif;
+  font-weight: 700;
+  font-weight: 300;
+  font-size: 20px;
+}
+.nav-container nav li {
+  padding: 10px;
+}
+.landing-page-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  height: 100vh;
+}
+.landing-page-container .faded {
+  opacity: 0.1;
+}
+.landing-page-container .links img {
+  max-width: 32px;
+}
+.landing-page-container .links a {
+  display: inline-block;
   padding: 5px;
 }
-.name-title {
+.landing-page-container .name-title {
   text-align: center;
-  margin: 250px;
+  font-family: "Poppins", sans-serif;
+  font-weight: 700;
+  transition-property: opacity;
+  transition-duration: 0.5s;
 }
-.tech-stack-icons {
+.landing-page-container .name-title h1 {
+  font-weight: 100;
+  font-size: 8vw;
+  line-height: 0;
+}
+.landing-page-container .name-title h2 {
+  font-size: 3vw;
+}
+.landing-page-container .tech-stack-icons {
   text-align: center;
+  transition-property: opacity;
+  transition-duration: 0.5s;
 }
-.tech-stack-icons img {
-  max-width: 50px;
-  padding: 15px;
+.landing-page-container .tech-stack-icons img {
+  max-width: 32px;
+  padding: 12px;
 }
 .resume-container {
   display: flex;
@@ -33,7 +147,23 @@ ul {
 .resume-container .resume-experience {
   padding: 50px;
 }
+.resume-container .resume-experience .experience-block {
+  padding: 20px;
+}
 .resume-container .resume-experience .experience {
+  border-top: 5px solid black;
+  padding-top: 50px;
+}
+.about-me-container {
+  display: flex;
+}
+.about-me-container .portrait {
+  max-width: 125%;
+}
+.about-me-container .about-me-text {
+  margin: 50px;
+}
+.about-me-container .about-me-story {
   border-top: 5px solid black;
   padding-top: 50px;
 }
