--- a/src/portfolio.less
+++ b/src/portfolio.less
@@ -32,6 +32,11 @@ img {
   max-width: 100%;
 }
 
+a {
+  text-decoration: none;
+  color: inherit;
+}
+
 // Nav //
 // Nav //
 .nav-container {
@@ -127,6 +132,10 @@ img {
 // Resume //
 .resume-container {
   display: flex;
+  h1,
+  h2 {
+    .heading-font();
+  }
 
   img {
     max-width: 25px;
@@ -137,7 +146,9 @@ img {
 
     .tech-stack-list {
       border-top: 5px solid black;
-      padding-top: 50px;
+      padding-top: 150px;
+      .heading-font();
+      font-size: 35px;
     }
   }
 
@@ -146,6 +157,30 @@ img {
 
     .experience-block {
       padding: 20px;
+
+      .dates {
+        .heading-font();
+        font-weight: 500;
+        text-transform: uppercase;
+      }
+
+      h1 {
+        text-transform: uppercase;
+        // line-height: 0;
+      }
+
+      h2 {
+        font-size: 20px;
+      }
+
+      .description {
+        .reading-font();
+
+        img {
+          width: 10px;
+          padding-right: 15px;
+        }
+      }
     }
 
     .experience {
@@ -162,13 +197,34 @@ img {
 
   .portrait {
     max-width: 125%;
+    // height: 100vh;
   }
 
   .about-me-text {
-    margin: 50px;
+    padding: 50px;
   }
   .about-me-story {
     border-top: 5px solid black;
     padding-top: 50px;
+    .reading-font();
+  }
+}
+
+// Contact //
+// Contact //
+.contact-info {
+  .heading-font();
+  padding-bottom: 30px;
+
+  h2 {
+    font-size: 50px;
+  }
+  h3 {
+    font-size: 35px;
+    line-height: 0;
+  }
+  h4 {
+    font-size: 20px;
+    line-height: 0;
   }
 }
