--- a/src/portfolio.less
+++ b/src/portfolio.less
@@ -128,8 +128,8 @@ a {
   }
 }
 
-// Resume //
-// Resume //
+// Resume & Portfolio //
+// Resume & Portfolio //
 .resume-container {
   display: flex;
   h1,
@@ -142,27 +142,23 @@ a {
   }
 
   .resume-basic-info {
-    padding: 50px;
+    padding-left: 50px;
 
     .tech-stack-list {
       border-top: 5px solid black;
       padding-top: 150px;
       .heading-font();
       font-size: 35px;
+      word-spacing: 13px;
     }
   }
 
   .resume-experience {
+    width: 100%;
     padding: 50px;
 
     .experience-block {
       padding: 20px;
-
-      .dates {
-        .heading-font();
-        font-weight: 500;
-        text-transform: uppercase;
-      }
 
       h1 {
         text-transform: uppercase;
@@ -173,6 +169,12 @@ a {
         font-size: 20px;
       }
 
+      .dates {
+        .heading-font();
+        font-weight: 500;
+        text-transform: uppercase;
+      }
+
       .description {
         .reading-font();
 
@@ -180,51 +182,55 @@ a {
           width: 10px;
           padding-right: 15px;
         }
+
+        a {
+          text-decoration: underline;
+        }
+      }
+
+      .experience {
+        border-top: 5px solid black;
+        padding-top: 50px;
       }
     }
+  }
 
-    .experience {
+  // About Me //
+  // About Me //
+  .about-me-container {
+    display: flex;
+
+    //   .portrait {
+    //     // max-width: 125%;
+    //     // height: 100vh;
+    //   }
+
+    .about-me-text {
+      padding: 50px;
+    }
+    .about-me-story {
       border-top: 5px solid black;
       padding-top: 50px;
+      .reading-font();
     }
   }
-}
 
-// About Me //
-// About Me //
-.about-me-container {
-  display: flex;
+  // Contact //
+  // Contact //
+  .contact-info {
+    .heading-font();
+    padding-bottom: 30px;
 
-  .portrait {
-    max-width: 125%;
-    // height: 100vh;
-  }
-
-  .about-me-text {
-    padding: 50px;
-  }
-  .about-me-story {
-    border-top: 5px solid black;
-    padding-top: 50px;
-    .reading-font();
-  }
-}
-
-// Contact //
-// Contact //
-.contact-info {
-  .heading-font();
-  padding-bottom: 30px;
-
-  h2 {
-    font-size: 50px;
-  }
-  h3 {
-    font-size: 35px;
-    line-height: 0;
-  }
-  h4 {
-    font-size: 20px;
-    line-height: 0;
+    h2 {
+      font-size: 50px;
+    }
+    h3 {
+      font-size: 35px;
+      line-height: 0;
+    }
+    h4 {
+      font-size: 20px;
+      line-height: 0;
+    }
   }
 }
