--- a/src/portfolio.css
+++ b/src/portfolio.css
@@ -84,6 +84,7 @@ a {
   display: flex;
   align-items: center;
   width: 100%;
+  height: 100vh;
   background-color: black;
   color: white;
   padding: 50px;
@@ -137,6 +138,7 @@ a {
 }
 .resume-container {
   display: flex;
+  height: 100vh;
 }
 .resume-container h1,
 .resume-container h2 {
@@ -147,6 +149,9 @@ a {
   max-width: 25px;
 }
 .resume-container .resume-basic-info {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
   padding-left: 50px;
 }
 .resume-container .resume-basic-info .tech-stack-list {
@@ -158,6 +163,9 @@ a {
   word-spacing: 13px;
 }
 .resume-container .resume-experience {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
   width: 100%;
   padding: 50px;
 }
@@ -166,6 +174,7 @@ a {
 }
 .resume-container .resume-experience .experience-block h1 {
   text-transform: uppercase;
+  line-height: 0;
 }
 .resume-container .resume-experience .experience-block h2 {
   font-size: 20px;
@@ -188,7 +197,14 @@ a {
 }
 .resume-container .resume-experience .experience {
   border-top: 5px solid black;
-  padding-top: 50px;
+}
+@media screen and (max-width: 720px) {
+  .resume-container {
+    flex-direction: column;
+  }
+  .resume-container .tech-stack-list {
+    padding: 80px 50px;
+  }
 }
 .about-me-container {
   display: flex;
@@ -200,6 +216,11 @@ a {
   border-top: 5px solid black;
   padding-top: 50px;
   font-family: "Roboto Condensed", sans-serif;
+}
+@media screen and (max-width: 720px) {
+  .about-me-container {
+    flex-direction: column;
+  }
 }
 .contact-info {
   font-family: "Poppins", sans-serif;
