--- a/src/portfolio.less
+++ b/src/portfolio.less
@@ -63,6 +63,7 @@ a {
     display: flex;
     align-items: center;
     width: 100%;
+    height: 100vh;
     background-color: black;
     color: white;
     padding: 50px;
@@ -132,6 +133,8 @@ a {
 // Resume & Portfolio //
 .resume-container {
   display: flex;
+  height: 100vh;
+
   h1,
   h2 {
     .heading-font();
@@ -142,6 +145,9 @@ a {
   }
 
   .resume-basic-info {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
     padding-left: 50px;
 
     .tech-stack-list {
@@ -154,18 +160,21 @@ a {
   }
 
   .resume-experience {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
     width: 100%;
     padding: 50px;
 
     .experience-block {
       padding: 20px;
-
+      
       h1 {
-        text-transform: uppercase;
-        // line-height: 0;
-      }
-
-      h2 {
+          text-transform: uppercase;
+          line-height: 0;
+        }
+        
+        h2 {
         font-size: 20px;
       }
 
@@ -191,8 +200,14 @@ a {
     }
     .experience {
       border-top: 5px solid black;
-      padding-top: 50px;
+    //   padding-top: 50px;
     }
+  }
+  @media screen and (max-width: 720px) {
+      flex-direction: column;
+
+      .tech-stack-list { padding: 80px 50px;}
+      
   }
 }
 
@@ -213,6 +228,10 @@ a {
     border-top: 5px solid black;
     padding-top: 50px;
     .reading-font();
+  }
+
+  @media screen and (max-width: 720px) {
+      flex-direction: column;
   }
 }
 
