--- a/src/portfolio.less
+++ b/src/portfolio.less
@@ -11,6 +11,7 @@
 
 body {
   overflow-x: hidden;
+  line-height: 1.44;
 }
 
 ul {
@@ -37,6 +38,10 @@ a {
   color: inherit;
 }
 
+main {
+  position: relative;
+}
+
 // Nav //
 // Nav //
 .nav-container {
@@ -44,13 +49,13 @@ a {
   position: absolute;
   top: 0;
   right: 0;
-  width: 30%;
-  height: 100vh;
+  width: 300px;
+  height: 100%;
   transition-property: right;
   transition-duration: 0.5s;
 
   &.hide {
-    right: -24%;
+    right: -240px;
   }
 
   .button-container {
@@ -63,7 +68,7 @@ a {
     display: flex;
     align-items: center;
     width: 100%;
-    height: 100vh;
+    // height: 100%;
     background-color: black;
     color: white;
     padding: 50px;
@@ -224,6 +229,7 @@ a {
   .about-me-text {
     padding: 50px;
   }
+
   .about-me-story {
     border-top: 5px solid black;
     padding-top: 50px;
