--- a/src/portfolio.less
+++ b/src/portfolio.less
@@ -42,6 +42,27 @@ main {
   position: relative;
 }
 
+.faded {
+  opacity: 0.1;
+}
+
+.hidden {
+  opacity: 0;
+  z-index: -1;
+}
+
+.app-container {
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: 1fr;
+  > * {
+    grid-column: ~"1/-1";
+    grid-row: ~"1/-1";
+    transition-property: opacity;
+    transition-duration: 0.5s;
+  }
+}
+
 // Nav //
 // Nav //
 .nav-container {
@@ -70,7 +91,6 @@ main {
     width: 100%;
     // height: 100%;
     background-color: black;
-    color: white;
     padding: 50px;
     .heading-font();
     font-weight: 300;
@@ -78,6 +98,10 @@ main {
 
     li {
       padding: 10px;
+
+      button {
+        color: white;
+      }
     }
   }
 }
@@ -89,10 +113,6 @@ main {
   flex-direction: column;
   justify-content: space-between;
   height: 100vh;
-
-  .faded {
-    opacity: 0.1;
-  }
 
   .links {
     img {
@@ -173,13 +193,13 @@ main {
 
     .experience-block {
       padding: 20px;
-      
+
       h1 {
-          text-transform: uppercase;
-          line-height: 0;
-        }
-        
-        h2 {
+        text-transform: uppercase;
+        line-height: 0;
+      }
+
+      h2 {
         font-size: 20px;
       }
 
@@ -201,18 +221,18 @@ main {
           text-decoration: underline;
         }
       }
-      
     }
     .experience {
       border-top: 5px solid black;
-    //   padding-top: 50px;
+      //   padding-top: 50px;
     }
   }
   @media screen and (max-width: 720px) {
-      flex-direction: column;
+    flex-direction: column;
 
-      .tech-stack-list { padding: 80px 50px;}
-      
+    .tech-stack-list {
+      padding: 80px 50px;
+    }
   }
 }
 
@@ -237,7 +257,7 @@ main {
   }
 
   @media screen and (max-width: 720px) {
-      flex-direction: column;
+    flex-direction: column;
   }
 }
 
