--- a/src/portfolio.less
+++ b/src/portfolio.less
@@ -278,4 +278,15 @@ main {
     font-size: 20px;
     line-height: 0;
   }
+
+  .links {
+    img {
+      max-width: 32px;
+    }
+
+    a {
+      display: inline-block;
+      padding: 5px;
+    }
+  }
 }
