--- a/src/portfolio.css
+++ b/src/portfolio.css
@@ -40,6 +40,7 @@
   font-display: swap;
   src: url(https://fonts.gstatic.com/s/robotocondensed/v19/ieVi2ZhZI2eCN5jzbjEETS9weq8-32meKCM.ttf) format('truetype');
 }
+html,
 body {
   overflow-x: hidden;
   line-height: 1.44;
@@ -90,7 +91,7 @@ main {
   top: 0;
   right: 0;
   width: 300px;
-  height: 100%;
+  height: 100vh;
   transition-property: right;
   transition-duration: 0.5s;
 }
