--- a/src/portfolio.less
+++ b/src/portfolio.less
@@ -9,7 +9,7 @@
   font-family: "Roboto Condensed", sans-serif;
 }
 
-body {
+html, body {
   overflow-x: hidden;
   line-height: 1.44;
 }
@@ -55,6 +55,7 @@ main {
   display: grid;
   grid-template-columns: 1fr;
   grid-template-rows: 1fr;
+  
   > * {
     grid-column: ~"1/-1";
     grid-row: ~"1/-1";
@@ -71,7 +72,7 @@ main {
   top: 0;
   right: 0;
   width: 300px;
-  height: 100%;
+  height: 100vh;
   transition-property: right;
   transition-duration: 0.5s;
 
@@ -113,6 +114,8 @@ main {
   flex-direction: column;
   justify-content: space-between;
   height: 100vh;
+  
+  
 
   .links {
     img {
