--- a/src/portfolio.less
+++ b/src/portfolio.less
@@ -9,7 +9,9 @@
   font-family: "Roboto Condensed", sans-serif;
 }
 
+html,
 body {
+  overflow: hidden;
   line-height: 1.44;
 }
 
@@ -51,14 +53,18 @@ main {
 }
 
 .app-container {
-  overflow-x: hidden;
+  // overflow-x: hidden;
+  // width: 100vw;
   display: grid;
   grid-template-columns: 1fr;
   grid-template-rows: 1fr;
-  
+
   > * {
+    display: flex;
+    align-items: flex-start;
     grid-column: ~"1/-1";
     grid-row: ~"1/-1";
+    overflow-y: auto;
     transition-property: opacity;
     transition-duration: 0.5s;
   }
@@ -113,9 +119,8 @@ main {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  
   height: 100vh;
-  
-  
 
   .links {
     img {
@@ -174,6 +179,7 @@ main {
 
   .resume-basic-info {
     display: flex;
+    height: 100vh;
     flex-direction: column;
     justify-content: center;
     padding-left: 50px;
@@ -191,25 +197,30 @@ main {
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
-    width: 100%;
-    padding: 50px;
+    padding: 5%;
 
     .experience-block {
       padding: 20px;
 
       h1 {
         text-transform: uppercase;
-        // line-height: 0;
+        margin: 0;
       }
-
+      
       h2 {
         font-size: 20px;
+        margin: 0;
       }
-
+      
       .dates {
+        // line-height: 0;
         .heading-font();
         font-weight: 500;
         text-transform: uppercase;
+      }
+      
+      a:hover {
+          text-decoration: underline;        
       }
 
       .description {
