attempt favicon update

--- a/src/portfolio.css
+++ b/src/portfolio.css
@@ -73,6 +73,7 @@ main {
 .hidden {
   opacity: 0;
   z-index: -1;
+  transform: scale(0.98);
 }
 .app-container {
   display: grid;
@@ -83,7 +84,7 @@ main {
   grid-column: 1/-1;
   grid-row: 1/-1;
   overflow-y: auto;
-  transition-property: opacity;
+  transition-property: opacity transform;
   transition-duration: 0.5s;
 }
 .nav-container {
