added alt to lightning and link icon img

--- a/src/portfolio.less
+++ b/src/portfolio.less
@@ -50,7 +50,7 @@ main {
 .hidden {
   opacity: 0;
   z-index: -1;
-  transform: scale(.98);
+  transform: scale(0.98);
 }
 
 .app-container {
@@ -238,7 +238,7 @@ main {
       border-top: 5px solid black;
     }
 
-    .education {  
+    .education {
       align-self: flex-end;
     }
   }
