--- a/src/portfolio.less
+++ b/src/portfolio.less
@@ -234,11 +234,11 @@ main {
       }
     }
 
-    .experience {
-      border-top: 5px solid black;
-    }
-
+    // .experience {
+      
+    // }
     .education {
+      border-top: 5px solid black;
       align-self: flex-end;
     }
   }
